// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тест CRUD карточек Добавление валидной карточки 1`] = `
Object {
  "task": Object {
    "_id": "6155714acc14d50fb07d7a64",
    "completed": false,
    "description": "Test insert description",
    "tags": Array [
      "insert",
      "test",
    ],
    "time": 240000,
    "title": "Test insert title",
    "user": "admin@admin.com",
    "whatWatch": "serial",
  },
}
`;

exports[`Тест CRUD карточек Получение списка карточек 1`] = `
Object {
  "tasks": Array [
    Object {
      "_id": "615389870893021de40023ac",
      "completed": false,
      "description": "Test description film",
      "tags": Array [
        "test",
      ],
      "time": 60000,
      "title": "Test title silm",
      "user": "admin@admin.com",
      "whatWatch": "film",
    },
    Object {
      "_id": "615389870893021de40023ad",
      "completed": true,
      "description": "Test description serial",
      "tags": Array [
        "test",
      ],
      "time": 60000,
      "title": "Test title serial",
      "user": "admin@admin.com",
      "whatWatch": "serial",
    },
  ],
}
`;

exports[`Тест CRUD карточек Редактирование карточки 1`] = `
Object {
  "task": Object {
    "_id": "615389870893021de40023ac",
    "completed": false,
    "description": "Test description film",
    "tags": Array [
      "test",
    ],
    "time": 60000,
    "title": "Test update title",
    "user": "admin@admin.com",
    "whatWatch": "film",
  },
}
`;
